- Fixed the 'broken-ness' of the site on screens with less than ~1100px width. Now totally scales automatically.
- Removed the () from around (logout) as it looks better

- Made the "Online Shells" menu bigger as the text was cut off at the bottom.

--- a/static/live-core.css
+++ b/static/live-core.css
@@ -3,7 +3,7 @@
     font-size: 10pt;
     margin: 0 0 10px 0;
     padding: 5px;
-    width: 50em;
+    width: 95%;
     height: 20em;
     overflow: auto;
     border: 1px solid silver;
@@ -38,7 +38,7 @@
 .sympy-live-prompt {
     font-family: monospace;
     font-size: 10pt;
-    width: 47.5em;
+    width: 88.5%;
     border: 1px solid silver;
     margin: 0;
     padding: 5px;
